--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -99,4 +99,6 @@
     <string name="n_days">%d дн.</string>
     <string name="set">Задать</string>
     <string name="start_menstruation_must_be_no_later_than_today">Дата начала менструации должна быть не позднее, чем сегодня</string>
+    <string name="no_added_menses">Нет добавленных</string>
+    <string name="no_added_menses_yet">Пока нет добавленных менструаций</string>
 </resources>
