Section for women: realized saving duration of menstruation

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -95,7 +95,8 @@
     <string name="select_time_interval">Выберите отрезок времени</string>
     <string name="last_menstruation">Последняя менструация:</string>
     <string name="menses">Менструации</string>
-    <string name="duration_of_menstrual_cycle">Продолжительность менструального цикла:</string>
+    <string name="duration_of_menstrual_cycle">Длительность менструального цикла:</string>
+    <string name="duration_of_menstruation">Длительность менструации:</string>
     <string name="n_days">%d дн.</string>
     <string name="set">Задать</string>
     <string name="start_menstruation_must_be_no_later_than_today">Дата начала менструации должна быть не позднее, чем сегодня</string>
