--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,4 +103,5 @@
     <string name="start_menstruation_must_be_no_later_than_today">Start date of menstruation must be no later than today</string>
     <string name="no_added_menses">No added menses</string>
     <string name="no_added_menses_yet">No added menses yet</string>
+    <string name="period_of_menstruation">Period of menstruation</string>
 </resources>
