Shopping list screen: added drop-down to select method of list sorting (only layout element, no sorting happens yet)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -109,4 +109,7 @@
     <string name="next_menstruation">Следующая менструация:</string>
     <string name="no_data">Нет данных</string>
     <string name="delay_of_menstruation">Задержка: %d дн.</string>
+    <string name="by_creation_date">По дате создания</string>
+    <string name="alphabetically">По алфавиту</string>
+    <string name="important_first">Сначала важные</string>
 </resources>
