--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,5 @@
     <string name="by_creation_date">By creation date</string>
     <string name="alphabetically">Alphabetically</string>
     <string name="important_first">Important first</string>
+    <string name="crossed_out_last">Crossed out last</string>
 </resources>
