Calendar date screen: realized to-do list sorting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,5 @@
     <string name="alphabetically">Alphabetically</string>
     <string name="important_first">Important first</string>
     <string name="crossed_out_last">Crossed out last</string>
+    <string name="completed_last">Completed last</string>
 </resources>
