--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -113,4 +113,5 @@
     <string name="alphabetically">По алфавиту</string>
     <string name="important_first">Сначала важные</string>
     <string name="crossed_out_last">Вычеркнутые в конце</string>
+    <string name="completed_last">Выполненные в конце</string>
 </resources>
