--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -21,7 +21,7 @@
     <string name="enter_ful_name_your_location">Введите название вашего местоположения:</string>
     <string name="for_example_st_petersburg">Например, Санкт-Петербург</string>
     <string name="location_not_selected">Местоположение не выбрано</string>
-    <string name="feels_like">ощущается как</string>
+    <string name="feels_like">Ощущается как</string>
     <string name="meters_per_second">м/с</string>
     <string name="failed_to_update_weather_data">Не удалось обновить погодные данные</string>
     <string name="search_location_error">Ошибка при поиске местоположений</string>
