--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="enter_ful_name_your_location">Enter the name of your location:</string>
     <string name="for_example_st_petersburg">For example, St. Petersburg</string>
     <string name="location_not_selected">Location not selected</string>
-    <string name="feels_like">feels like</string>
+    <string name="feels_like">Feels like</string>
     <string name="meters_per_second">m/s</string>
     <string name="failed_to_update_weather_data">Failed to update weather data</string>
     <string name="search_location_error">Search location error</string>
