Location selection screen: added buttons to select location from proposed ones

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -19,7 +19,10 @@
     <string name="ok">Хорошо</string>
     <string name="what_do_you_want_to_buy">Что купить?</string>
     <string name="enter_ful_name_your_location">Введите название вашего местоположения:</string>
+    <string name="saint_petersburg">Санкт-Петербург</string>
+    <string name="moscow">Москва</string>
     <string name="for_example_st_petersburg">Например, Санкт-Петербург</string>
+    <string name="for_example_novosibirsk">Например, Новосибирск</string>
     <string name="location_not_selected">Местоположение не выбрано</string>
     <string name="feels_like">Ощущается как</string>
     <string name="meters_per_second">м/с</string>
